:star2: feat: add puml cheatsheet links

--- a/static/assets/plantuml/puml-cheatsheet.tex
+++ b/static/assets/plantuml/puml-cheatsheet.tex
@@ -68,7 +68,7 @@ rectangle, rounded corners, inner sep=10pt, inner ysep=10pt] (box){
 
 \begin{document}
 \vspace{-5pt}
-\header{ultimate PlantUML Cheatsheet}{by \href{http://anoff.io}{Andreas Offenhaeuser}}{v.COMMITID}
+\header{ultimate PlantUML Cheatsheet}{by \href{http://anoff.io}{Andreas Offenhaeuser}}{v.1f5b1b83}
 \vspace{-20pt} % couldn't figure out where the margins come from so force them out
 \begin{multicols*}{3}
 
