:scissors: refactor: use forked theme for draft support

--- a/content/draft/2019-02-XY-antora-2.adoc
+++ b/content/draft/2019-02-XY-antora-2.adoc
@@ -1,4 +1,11 @@
-= BLUP
+---
+title: Setting up plantUML in antora
+date: 2019-02-01
+tags: [datascience, terraform, azure]
+author: anoff
+resizeImages: true
+draft: true
+---
 
 == plantUML
 
