:construction_worker: build: publish via ghpages

--- a/content/code/2019-02-XY-antora-2.adoc
+++ b/content/code/2019-02-XY-antora-2.adoc
@@ -19,3 +19,6 @@ asciidoc:
   - asciidoctor-plantuml
 ----
 * hacky file copy around
+
+* remove navigation menu for single system but multi component builds
+** only nested components
