:star2: feat: antora v2 draft

--- a/content/code/2019-02-15-antora-first-steps.adoc
+++ b/content/code/2019-02-15-antora-first-steps.adoc
@@ -1,7 +1,7 @@
 ---
 title: Converting existing AsciiDoc into an Antora project
 date: 2019-02-15
-tags: [development, architecture]
+tags: [development, docs, architecture]
 author: anoff
 resizeImages: true
 featuredImage: /assets/antora-arc42/antora-arc42.png
