--- a/content/code/2019-04-19-antora-plantuml-customize-ui.adoc
+++ b/content/code/2019-04-19-antora-plantuml-customize-ui.adoc
@@ -3,19 +3,20 @@ title: Advanced customization for Antora - PlantUML support & custom UI
 date: 2019-04-19
 tags: [docs, architecture]
 author: anoff
-resizeImages: false
 draft: false
 featuredImage: /assets/antora-puml/title.png
 ---
-:imagesdir: /assets/antora-puml/
 :plantuml-server-url: http://plantuml.com/plantuml
+:outdir: _site
+:imagesdir: /assets/antora-puml
+:imagesoutdir: _site/assets/antora-puml
 
 This post will cover some slightly advanced steps for building a multi-repository Asciidoc documentation using link://antora.org/[Antora].
 My previous post link://blog.anoff.io/2019-02-15-antora-first-steps/[blog.anoff.io/2019-02-15-antora-first-steps] covered basics of Antora and how to migrate existing AsciiDoc files.
 In this post I will go through the steps of including content from another repository, building a custom UI and adding plantUML support to the (automated, dockerized) build.
 
 .Screenshot of the final gitarc.xyz ARC42 Antora build
-image::screenshot.png[Screenshot of the gitarc.xyz page]
+image::/assets/antora-puml/screenshot.png[Screenshot of the gitarc.xyz page]
 
 == plantUML support
 
@@ -28,7 +29,7 @@ So plantUML support is important both for rendering the Antora website and the l
 For local previews I use the link:https://marketplace.visualstudio.com/items?itemName=joaompinto.asciidoctor-vscode[AsciiDoc extension] by João Pinto.
 
 .PlantUML preview in VS code
-image::vscode-asciidoc.png[VS Code Preview of PlantUML in .aodc]
+image::/assets/antora-puml/vscode-asciidoc.png[VS Code Preview of PlantUML in .aodc]
 
 To get the plugin working you need to set the `plantuml-server-url` Asciidoctor attribute on your page as described on the link:https://github.com/eshepelyuk/asciidoctor-plantuml.js#configuration[asciidoctor-plantuml package] that is used for rendering in VSC.
 Sadly this needs to be set for every single adoc file - if you want to preview it.
@@ -61,7 +62,7 @@ Another feature I promised to address during my link:/2019-02-15-antora-first-st
 For my link:https://github.com/anoff/antora-arc42[arc42 dummy project] I used both.
 
 .Table of Contents for ARC42 project
-image::arc-toc.png[ARC42 table of contents]
+image::/assets/antora-puml/arc-toc.png[ARC42 table of contents]
 
 Given the above table of contents the chapters _Cross-cutting concepts_ and _Architecture decisions_ where put into a separate module within the main component.
 The modules _concepts_ and _adr_ (architecture design record) are moved into link:https://github.com/anoff/antora-arc42/tree/master/docs/modules[separate modules] because I prefer to have each concept/adr in a separate `.adoc` file.
@@ -139,7 +140,7 @@ As all style attributes are bundled into a single `site.css` file it is quite ha
 Dan - the author of Antora - explained it like this in an link:https://gitlab.com/antora/antora/issues/149[issue discussion] I had in the Antora repository.
 
 .Dan Allen on customizing the UI
-image::ui-style.png[Dan Allen on customizing the UI]
+image::/assets/antora-puml/ui-style.png[Dan Allen on customizing the UI]
 
 === Creating a custom UI bundle
 
@@ -152,7 +153,7 @@ The main changes I implemented with this bundle are:
 . remove the component navigation dropdown as shown in the image below
 
 .Antora component navigator
-image::navdrop.gif[component navigation dropdown]
+image::/assets/antora-puml/navdrop.gif[component navigation dropdown]
 
 The component navigation has been removed because in the case of the ARC42 documentation the MediaManager component is not a documentation in itself but merely a way of creating a _multi-repository architecture documentation_.
 Therefore only a single entrypoint into the documentation is required.
