--- a/content/code/2019-05-14-antora-navigation-files.adoc
+++ b/content/code/2019-05-14-antora-navigation-files.adoc
@@ -13,13 +13,12 @@ featuredImage: /assets/antora-arc42/title-3.png
 
 This third post in the series of Antora posts quickly addresses a feature I only recently discovered.
 It will show you some techniques you can use to compose the navigation menu in a multi-repository, multi-module setup.
-This is especially interesting if you have content and an entire branch of your navigation in another repository.
+This is especially interesting if you have content spread across repositories that you want to present hierarchically in the navigation tree.
 
-
-Let us start with the basics: **How to combine navigation files?**
-
+<!--more-->
 == Using multiple navigation files
 
+Let us start with the basics: **How to combine navigation files?**
 
 The link:https://docs.antora.org/antora/2.0/navigation/register-navigation-files/[Antora docs] explain how you can use multiple navigation files for one component by using the `nav` key in the component descriptor.
 However this limits you to the operation of **concatenation**.
