--- a/content/code/2019-02-15-antora-first-steps.adoc
+++ b/content/code/2019-02-15-antora-first-steps.adoc
@@ -165,4 +165,4 @@ Over the next few days/weeks I will keep working on this setup to bring in more 
 
 Stay tuned for follow up posts on these steps.
 
-If you have any questions send me a DM on link://twitter.com/an0xff[Twitter] or leave a comment below.
+If you have any questions send me a DM on link://twitter.com/anoff_io[Twitter] or leave a comment below.
