--- a/content/code/2019-08-23-drone-ci-to-azure-pipelines.adoc
+++ b/content/code/2019-08-23-drone-ci-to-azure-pipelines.adoc
@@ -1,5 +1,5 @@
 ---
-title: How to start with Azure Pipelines
+title: Migrating to Azure Pipelines
 date: 2019-08-23
 tags: [CI/CD]
 author: anoff
@@ -8,15 +8,13 @@ draft: true
 ---
 :imagesdir: /assets/
 
-:toc:
-
 Beginning of the year I switched my blogs build chain from Travis CI to link:https://drone.io/[drone CI].
 Due to some tasks with Azure DevOps at work I wanted to test how good it fits my private projects.
 In this post I will NOT tell you how to set up your pipelines project because Microsoft has link:https://docs.microsoft.com/en-us/azure/devops/pipelines/create-first-pipeline?view=azure-devops&tabs=tfs-2018-2[great docs] for that.
 Instead this post will cover how to best put your build workflow into a pipeline specification.
-Readers should be familiar with `bash`, `yaml` and basic `docker` concepts.
+In addition I will cover the necessary steps to migrate existing CI/CD workloads from Travis and drone to Azure Pipelines.
 
-> This post will explain the fundamental differences between Drone and Azure Pipelines, then explain specifically what I needed to do to migrate an existing CI pipeline.
+Readers should be familiar with `bash`, `yaml` and basic `docker` concepts.
 
 == Introduction to Azure Pipelines 👋
 
@@ -136,7 +134,7 @@ Step2.2 --> Step2.3
 By specifying **Stages** you can execute fan-out and fan-in multiple times within your pipeline.
 Each **Stage** represents a fan-in operation where all defined jobs need to finish before the next stage is triggered which can fan-out again.
 
-image::azure-pipelines/fan-out.png[Fan-Out Fan-In with stages]
+image::azure-pipelines/fan-out-fan-in.png[Fan-Out Fan-In with stages]
 
 Looking back at the hierarchies existing the YAML file the actual execution pattern can be described with the state machine below.
 Only one stage is executing at a time; if possible all jobs within this stage are executed in parallel.
@@ -192,9 +190,166 @@ state Stage2 {
 @enduml
 ....
 
-== Not so great things
+== Migrating from drone to Azure Pipelines 🚐
 
-Here are some things that I learned over time and I hope will improve in the future.
+The first CI/CD workload I moved to Azure Pipelines was this blog.
+As you can see in the image below, this is a very simple pipeline with just a few steps and no fan-in/fan-out behavior.
+
+.CI steps in the existing drone pipeline
+image::azure-pipelines/drone-steps.png[Step overview]
+
+The drone pipeline was already relying on a link:https://hub.docker.com/r/anoff/hugo-asciidoctor[custom docker image] as described link:https://blog.anoff.io/2019-02-17-hugo-render-asciidoc/[in this previous blog post about rendering asciidoc in hugo].
+That made the migration quite easy as there is not a lot of customization to the build agent necessary.
+All required tools to run the pipeline are encapsuled in that docker image.
+
+I played around with various plugins available on the DevOps marketplace for Docker, Hugo and GitHub pages deploy but they either did not support the use case I have or ran outdated versions of the tools and did not let me update.
+Now let's compare the actual pipeline definition.
+
+.Azure pipelines vs drone spec
+[cols="1,3a,3a"]
+|===
+|Step | Azure Pipelines YAML | drone.io YAML
+| Bootstrap |
+[source, yaml, linenums]
+....
+trigger:
+- master
+
+variables:
+- group: integration
+pool:
+  vmImage: 'ubuntu-16.04'
+
+steps:
+....
+|
+[source, yaml, linenums]
+....
+kind: pipeline
+name: deploy
+
+clone:
+  depth: 50
+
+steps:
+....
+
+| Clone repo |
+[source, yaml, linenums]
+....
+- checkout: self
+  displayName: 'Git checkout'
+  submodules: true
+....
+|
+[source, yaml, linenums]
+....
+- name: submodules
+  image: docker:git
+  commands:
+  - git submodule update --init --recursive --remote
+....
+
+| Hotfix some files |
+[source, yaml, linenums]
+....
+- task: Bash@3
+  displayName: 'Hotfix theme'
+  inputs:
+    targetType: 'inline'
+    script: \|
+      cp -R theme_fixes/** themes/bilberry-hugo-theme
+....
+|
+[source, yaml, linenums]
+....
+- name: hotfix 
+  image: anoff/hugo-asciidoctor
+  commands:
+  - cp -R theme_fixes/** themes/bilberry-hugo-theme
+  - cp -R theme_fixes/** themes/bilberry-hugo-theme-fork
+....
+
+| Build HTML content via hugo |
+[source, yaml, linenums]
+....
+- task: Bash@3
+  displayName: 'Build HTML'
+  inputs:
+    targetType: 'inline'
+    script: \|
+      docker run --rm -v $PWD:/app anoff/hugo-asciidoctor hugo --gc --minify -d _site
+      cp -R _site/* $(Build.ArtifactStagingDirectory)/
+- task: PublishPipelineArtifact@0
+  displayName: 'Publish artifact'
+  inputs:
+    artifactName: 'blog'
+    targetPath: '$(Build.ArtifactStagingDirectory)'
+....
+|
+[source, yaml, linenums]
+....
+- name: build
+  image: anoff/hugo-asciidoctor
+  commands:
+  - hugo --gc --minify -d _site --baseURL https://blog.anoff.io
+  - touch _site/.nojekyll
+....
+
+| Publish to GitHub pages |
+[source, yaml, linenums]
+....
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: \|
+      git clone https://anoff:$(github_token)@github.com/anoff/blog.git --branch=gh-pages ./ghpages
+      cd ./ghpages
+      git config core.autocrlf false
+      git config user.email ""
+      git config user.name "CI Joe"
+      rm -rf *
+      cp -R $(Build.ArtifactStagingDirectory)/* . # hardcode directory because pipeline vars are windows
+      echo blog.anoff.io > CNAME
+      git add .
+      git commit --allow-empty -m 'Automated build #$(Build.BuildNumber)'
+      git push
+  displayName: 'Publish to gh-pages'
+....
+|
+[source, yaml, linenums]
+....
+- name: publish  
+  image: plugins/gh-pages
+  settings:
+    username:
+      from_secret: github_username
+    password:
+      from_secret: github_token
+    pages_directory: _site
+  when:
+    branch:
+    - master
+....
+|===
+
+You can find the link:https://github.com/anoff/blog/blob/764493af186955eab28a30a2eb7e87de1a3e38dd/.drone.yml[drone CI definition] and link:https://github.com/anoff/blog/blob/dfe198ca9bbc3737fcc5a1c4e773ca5e5e80fe3c/azure-pipeline.yml[Azure Pipelines YAML] in my GitHub repo.
+
+The necessary steps for this migration were:
+
+. Write the Azure Pipelines YAML specification for my pipeline
+. Create link:https://docs.microsoft.com/en-us/azure/devops/pipelines/get-started/pipelines-sign-up?view=azure-devops[Azure DevOps project]
+. Create a link:https://docs.microsoft.com/en-us/azure/devops/pipelines/library/variable-groups?view=azure-devops&tabs=yaml[variables group] containing the secrets for the GitHub repo (to push `gh-pages` branch)
+. Set up a link:https://docs.microsoft.com/en-us/azure/devops/pipelines/create-first-pipeline?view=azure-devops&tabs=tfs-2018-2[new pipeline] referencing my YAML
+. Switch off the drone CI service for the repo
+. Change CI badge in README to `[![Build Status](https://anoff.visualstudio.com/anoff.io/_apis/build/status/anoff.blog?branchName=master)](https://anoff.visualstudio.com/anoff.io/_build/latest?definitionId=1&branchName=master)` ✅
+
+.CI steps in the new Azure Pipeline
+image::azure-pipelines/pipelines-step.png[Step overview]
+
+== Things I hope Azure Pipelines will improve in the future 🐞
+
+Here are some things that I learned over time and I hope will be fixed soon.
 
 === Scheduled jobs only run when people use the UI
 
@@ -221,6 +376,7 @@ This is something you can - and probably should - reconfigure.
 You can actually set this value to as high as 2 years.
 So I do not understand why the default is just a month.
 
+.Configure pipeline retention in the project settings
 image::azure-pipelines/configure-retention.png[Configure pipeline retention]
 
 The worst thing is that _Keeping a run_ not only means keeping the logs but actually after those 30 days Pipelines does not even know there ever was a run.
@@ -229,9 +385,30 @@ It seems like the pipeline never ran at all.
 
 I wish they just deleted the logs but kept the meta-data like date, run result and related commit ID.
 
+.All past pipeline executions are completely gone
 image::azure-pipelines/no-executions.png[Azure Pipelines showing no executions after 30 days]
 
 === YAML spec seems over-complicated
 
-Having used Travis CI, Drone and GitLab CI before I have to say the link:https://docs.microsoft.com/en-us/azure/devops/pipelines/yaml-schema?view=azure-devops&tabs=schema[YAML syntax] just feels bloated.
+Having used Travis CI, drone and GitLab CI before I have to say the link:https://docs.microsoft.com/en-us/azure/devops/pipelines/yaml-schema?view=azure-devops&tabs=schema[YAML syntax] just feels bloated.
 There are many more things you can configure compared to Travis but after the few pipelines I built I already found that these options often do match my use case and I end up writing hand-crafted inline scripts instead of using the provided tasks as well.
+
+=== Azure DevOps Project/Pipeline structure
+
+In Azure DevOps you can have a project that has multiple repositories and multiple pipelines.
+There is no 1:1 relationship between repos and pipelines.
+Multiple projects are grouped into an organization.
+
+This was new at first because most CI services out there just create one project/pipeline per repository.
+Even after several weeks I do not really get familiar with this additional _layer_ that the project represents.
+
+== Summary
+
+Migrating to Azure Pipelines from an existing CI service is not a very complicated task if your existing workload fulfills the following requirements - which should be best practice 😉
+
+. no customized agents, instead bundle tools into docker images that serve as runtime for the CI job
+. no hard dependency on service-specific plugins/features
+. secrets can be easily injected via environment variables or arguments
+. your pipeline is modular - not really necessary but a single job, single step pipeline looks weird on the UI
+
+If you have any questions drop me a DM via link:https://twitter.com/anoff_io[Twitter] or leave a comment 👋
